--- a/README.textile
+++ b/README.textile
@@ -1,4 +1,4 @@
-h1. fr.obeo.releng.targetplatform
+h1. Obeo Target Platform Definition DSL and Generator
 
 Obeo Target Platform Definition DSL and Generator provides a DSL with an advanced editor and a generator taking this DSL as input and generating a @.target@ file that PDE is able to read to provision a Target Platform.
 
@@ -10,7 +10,7 @@ h2. Installation
 
 Add the following p2 repository (update-site) in your update manager (in Eclipse, @Help Menu > Install New Software...@, @Add...@ button on the top right corner)
 
-<pre></pre>
+*http://mbarbero.github.com/fr.obeo.releng.targetplatform/p2/*
 
 Then, select the "Obeo Target Platform Definition DSL and Generator" feature and click on @Finish@.
 
