--- a/README.textile
+++ b/README.textile
@@ -2,6 +2,8 @@ h1. Obeo Target Platform Definition DSL and Generator
 
 Obeo Target Platform Definition DSL and Generator provides a DSL with an advanced editor and a generator taking this DSL as input and generating a @.target@ file that PDE is able to read to provision a Target Platform.
 
+The greatest thing about this tool is that it avoids you to manage .target files links to strict versions (e.g., @3.2.5.v20093493-sfoit-v-rrel@). It lets you define the bundles and features you want to use in your target platform and it handles the generation of the .target file with the most recent available version. It is possible to restrict the lookup within a version range.
+
 !http://imageshack.us/a/img15/8338/tpeditor.png(The targetplatform DSL editor)!
 
 !http://imageshack.us/a/img832/1508/tpgenmenucreate.png(The right-click command)!
