--- a/README.textile
+++ b/README.textile
@@ -1,4 +1,4 @@
-h1. Obeo Target Platform Definition DSL and Generator
+h1. Target Platform Definition DSL and Generator
 
 Obeo Target Platform Definition DSL and Generator provides a DSL with an advanced editor and a generator taking this DSL as input and generating a @.target@ file that PDE is able to read to provision a Target Platform.
 
