--- a/README.textile
+++ b/README.textile
@@ -1,3 +1,5 @@
+!https://travis-ci.org/mbarbero/fr.obeo.releng.targetplatform.png?branch=master!:https://travis-ci.org/mbarbero/fr.obeo.releng.targetplatform
+
 h1. Target Platform Definition DSL and Generator
 
 Target Platform Definition DSL and Generator provides a DSL with an advanced editor and a generator taking this DSL as input and generating a @.target@ file that PDE is able to read to provision a Target Platform.
@@ -16,7 +18,7 @@ Add the following p2 repository (update-site) in your update manager (in Eclipse
 
 Then, select the "Target Platform Definition DSL and Generator" feature suitable for your current Eclipse version and click on @Finish@.
 
-bq. This tool requires Xtext 2.3.0 (released along with Eclipse Juno - 3.8/4.2) or later. If installing on Eclipse 3.6 or 3.7, you may need to add the Juno repository to the available update sites to be able install and/or update Xtext: *http://download.eclipse.org/releases/juno/*
+bq. This tool requires Xtext 2.5.0 (released along with Eclipse Juno - 3.8/4.2) or later. If installing on Eclipse 3.6 or 3.7, you may need to add the Juno repository to the available update sites to be able install and/or update Xtext: *http://download.eclipse.org/releases/juno/*
 
 h3. Requirements
 
@@ -24,7 +26,7 @@ h3. Requirements
 
 * Eclipse 3.6+ (tested on 3.6, 3.7, 3.8/4.2 and 4.3)
 
-* Xtext 2.3.0+
+* Xtext 2.5.0+
 
 h2. Basic usage
 
@@ -89,14 +91,12 @@ Then, the most recent version of the given IU within this range will be selected
 
 h2. Build
 
-Go to @fr.obeo.releng.targetplatform-parent@ and do a @mvn clean package@.
-
-!https://travis-ci.org/mbarbero/fr.obeo.releng.targetplatform.png?branch=master!:https://travis-ci.org/mbarbero/fr.obeo.releng.targetplatform
+Go to @fr.obeo.releng.targetplatform-parent@ and do a @mvn clean package@ or @mvn clean verify@.
 
 h2. Contribute
 
-Clone this repository, import all projects in your Eclipse and set your target platform to the one in @fr.obeo.releng.targetplatform-parent/targetdefinitions@.
+Clone this repository, import all projects in your Eclipse and set your target platform to the one in @fr.obeo.releng.targetplatform-parent/default.target@.
 
 h2. License
 
-Copyright (c) 2012, 2013 Obeo. All rights reserved. This program and the accompanying materials are made available under the terms of the Eclipse Public License v1.0 which accompanies this distribution, and is available at http://www.eclipse.org/legal/epl-v10.html 
+Copyright (c) 2012-2014 Obeo. All rights reserved. This program and the accompanying materials are made available under the terms of the Eclipse Public License v1.0 which accompanies this distribution, and is available at http://www.eclipse.org/legal/epl-v10.html 
