--- a/README.textile
+++ b/README.textile
@@ -4,11 +4,9 @@ h1. Target Platform Definition DSL and Generator
 
 Target Platform Definition DSL and Generator provides a DSL with an advanced editor and a generator taking this DSL as input and generating a @.target@ file that PDE is able to read to provision a Target Platform.
 
-The greatest thing about this tool is that it avoids you to manage .target files links to strict versions (e.g., @3.2.5.v20093493-sfoit-v-rrel@). It lets you define the bundles and features you want to use in your target platform and it handles the generation of the .target file with the most recent available version. It is possible to restrict the lookup within a version range.
+The greatest thing about this tool is that it avoids you to manage the links to strict versions (e.g., @3.2.5.v20093493-sfoit-v-rrel@) in @.target@ files. It lets you define the bundles and features you want to use in your target platform and it handles the generation of the @.target@ file with the most recent available version. It is possible to restrict the lookup within a version range.
 
-!http://imageshack.com/a/img691/6196/tl67.png(The targetplatform DSL editor)!
-
-!http://imageshack.com/a/img200/2008/5jb1.png(The right-click command)!
+!http://s21.postimg.org/4jw573f5z/targetplatform_editor.png(The targetplatform DSL editor)!
 
 h2. Installation
 
@@ -16,23 +14,31 @@ Add the following p2 repository (update-site) in your update manager (in Eclipse
 
 *http://mbarbero.github.io/fr.obeo.releng.targetplatform/p2/* or *http://mbarbero.github.io/fr.obeo.releng.targetplatform/p2/latest/* for the latest version only.
 
-Then, select the "Target Platform Definition DSL and Generator" feature suitable for your current Eclipse version and click on @Finish@.
+Then, select the _Target Platform Definition DSL and Generator_ feature and click on @Finish@.
 
-bq. This tool requires Xtext 2.5.0 or later. You may need to add the Xtext update site to the list of the available update sites to be able install and/or update Xtext: *http://download.eclipse.org/modeling/tmf/xtext/updates/releases/*
+bq. This tool requires Xtext 2.6.0 or later. You may need to add the Xtext update site to the list of the available update sites to be able install and/or update Xtext: *http://download.eclipse.org/modeling/tmf/xtext/updates/releases/*
 
 h3. Requirements
 
 * Java SE 6
 
-* Eclipse 3.6+ (tested on 3.6, 3.7, 3.8/4.2 and 4.3)
+* Eclipse 3.7+ (tested on 3.8/4.2 and 4.3)
 
-* Xtext 2.5.0+
+* Xtext 2.6.0+
 
 h2. Basic usage
 
 * Create a file with @.tpd@ extension
 
-* Once done, right-click on the file and select "Create Target Definition File" 
+* Once done, right-click on the file and select _Create Target Definition File_
+
+!http://imageshack.com/a/img200/2008/5jb1.png(The right-click command)!
+
+* You can also right-click on an opened file and choose @Validate@, it will look for any error and will also check if all repositories are available and if all specified installation unit are available within the repository (and respecting the version range if any).
+
+!http://s21.postimg.org/xxrvmohvr/targetplatform_validate_action.png(The right-click validate command)!
+
+!http://s21.postimg.org/r61gjtsw7/targetplatform_validateresult.png(The validation result)!
 
 h3. Syntax
 
@@ -57,10 +63,10 @@ include "base.tpd"
 include "http://git.some.server.org/tree/tp/all.tpd"
 </pre>
 
-You can define some options (separated with comma) about what should be retrieved from the p2 repository. You can do that with the @with@ keyword immediatly after include directives.
+You can define some options about what should be retrieved from the p2 repository. You can do that with the @with@ keyword.
 
 <pre>
-with source, allEnvironments	
+with source allEnvironments	
 </pre>
 
 Available options are:
@@ -72,19 +78,25 @@ Available options are:
 
 bq. @source@ and @configurePhase@ are not supported by PDE before 3.8. If you use a version of PDE older than 3.8, these options will simply be ignored.
 
+You can define the environment of your target platform about what should be retrieved from the p2 repository. You can do that with the @environment@ keyword. Content assist is your friend to find proper values.
+
+<pre>
+environment linux gtk x86_64
+</pre>
+
 Then, you define the locations of your p2 repositories. You can add as many locations as your want to your target. Location string must be URL, if your p2 repository is local, don't forget to put a @file:/@ URL.
 
 <pre>
 location "http://download.eclipse.org/releases/kepler/" 
 </pre>
 
-A location may have an ID that can be written before or after the URI. This is useful if you want to apply some maven stuff (providing a password, a mirror...) for this repository (see #17 for examples).
+A location may have an ID that can be written before or after the URI. This is useful if you want to apply some maven stuff (providing a password, a mirror...) for this repository (see "#17":https://github.com/mbarbero/fr.obeo.releng.targetplatform/issues/17 for examples).
 
 <pre>
 location kepler "http://download.eclipse.org/releases/kepler/" 
 </pre>
 
-Then, you may list the Installable Units (IUs) your want to include in your target. This can be Bundles or Eclipse Features (then it ends with @feature.group@).
+Then, you may list the Installable Units (IUs) your want to include in your target. This can be _bundles_ or Eclipse _features_ (it may end with @feature.group@).
 
 <pre>
 location "http://download.eclipse.org/releases/kepler/" {	
@@ -92,22 +104,26 @@ location "http://download.eclipse.org/releases/kepler/" {
 }
 </pre>
 
-bq. Don't forget that you can escape a keyword by prefixing it with @^@, e.g. if you need to reference @com.google.guava.source@, write it like @com.google.guava.^source@. The @^@ will be automatically stripped during the generation.
+bq. Don't forget that you can escape a keyword by prefixing it with @^@, e.g. if you need to reference a bundle name @environment@, write it like @^environment@. The @^@ will be automatically stripped during the generation.
 
 If no version is specified, the most recent IUs will be selected in the repository. You can restrain the range of version to use by using the same syntax as in @MANIFEST.MF@ files.
 
 <pre>
 location "http://download.eclipse.org/releases/juno/" {
     // select the most recent version of EMF after 2.7.0
-    org.eclipse.emf.sdk.feature.group;version=2.7.0
+    org.eclipse.emf.sdk.feature.group 2.7.0
     // select the most recent eclipse.rcp feature within the given range 
-    org.eclipse.rcp.feature.group;version=[4.0.0,4.3.0)
+    org.eclipse.rcp.feature.group [4.0.0,4.3.0)
 }
 </pre>
 
 Then, the most recent version of the given IU within this range will be selected.
 
 bq. You can use the special keyword @lazy@ as version to state that you don't want the generator to select the version to put in the @.target@ file. Instead, it puts @0.0.0@ which is interpreted by PDE during the resolution of the @.target@.
+
+h3. Call the generator from the command line
+
+This project provide an Eclipse application that you can launch from the command line. The ID of the application is @fr.obeo.releng.targetplatform.pde.ConverterApplication@ and is provided by the plugin @fr.obeo.releng.targetplatform@. You can use this app in shell scripts, ant or maven build. If you use Tycho, you may have a look at "this example pom.xml file":https://github.com/hmarchadour/fr.obeo.releng.targetplatform/blob/78e0d470f57bfd82ba6fe7e1c09bfeb2fdfb0180/fr.obeo.releng.targetplatform-parent/targetdefinitions/pom.xml
 
 h2. Build
 
