Fix #37 : Add a new key binding CTRL+R which resolve, load and set the TP
This commit adds a new command + key binding to set the current
.targetplatform file as the current targetplatform. IT wraps the .target
generation, the target resolving and reload in a single job, with no
need for opening the preference page or the .target editor.

This command is also available right-clicking on a .targetplatform file
(if only one is selected).

--- a/README.textile
+++ b/README.textile
@@ -42,6 +42,8 @@ h2. Basic usage
 
 !http://s21.postimg.org/r61gjtsw7/targetplatform_validateresult.png(The validation result)!
 
+* To activate the target platform, you can either use the "Set as Target Platform" action which is available on right-clicking on a .targetplatform file, or use the CTRL+R keybinding.
+
 h3. Syntax
 
 An empty file is a valid file.
