--- a/README.textile
+++ b/README.textile
@@ -22,11 +22,11 @@ bq. This tool requires Xtext 2.7.0 or later. You may need to add the Xtext updat
 
 h3. Requirements
 
-* Java SE 6
+* Java SE 8
 
-* Eclipse 3.7+ (tested on 3.8/4.2 and 4.3)
+* Eclipse 4.4+
 
-* Xtext 2.7.0+
+* Xtext 2.11+
 
 h2. Basic usage
 
