--- a/README.textile
+++ b/README.textile
@@ -2,6 +2,15 @@ h1. Target Platform Definition DSL and Generator
 
 !https://travis-ci.org/mbarbero/fr.obeo.releng.targetplatform.png?branch=master!:https://travis-ci.org/mbarbero/fr.obeo.releng.targetplatform
 
+h2. IMPORTANT
+
+This project has been "transfered to the Eclipse CBI project":https://bugs.eclipse.org/bugs/show_bug.cgi?id=538414 on August 31, 2018. As such, the previous repositories are not working anymore. If you still want legacy version of this project, please use one of the following two URL:
+
+*https://dl.bintray.com/mbarbero/fr.obeo.releng.targetplatform/* or
+*https://dl.bintray.com/mbarbero/fr.obeo.releng.targetplatform/latest*
+
+h2. Introduction
+
 Target Platform Definition DSL and Generator provides a DSL with an advanced editor and a generator taking this DSL as input and generating a @.target@ file that PDE is able to read to provision a Target Platform.
 
 The greatest thing about this tool is that it avoids you to manage the links to strict versions (e.g., @3.2.5.v20093493-sfoit-v-rrel@) in @.target@ files. It lets you define the bundles and features you want to use in your target platform and it handles the generation of the @.target@ file with the most recent available version. It is possible to restrict the lookup within a version range.
@@ -12,6 +21,9 @@ The greatest thing about this tool is that it avoids you to manage the links to 
 
 h2. Installation
 
+Since the transfer to the Eclipse CBI project (see the "IMPORTANT" note above), no new release has been done. As such, there is no update site available yet.
+
+<!-- 
 Add the following p2 repository (update-site) in your update manager (in Eclipse, @Help Menu > Install New Software...@, @Add...@ button on the top right corner)
 
 *http://mbarbero.github.io/fr.obeo.releng.targetplatform/p2/* or *http://mbarbero.github.io/fr.obeo.releng.targetplatform/p2/latest/* for the latest version only.
@@ -19,6 +31,7 @@ Add the following p2 repository (update-site) in your update manager (in Eclipse
 Then, select the _Target Platform Definition DSL and Generator_ feature and click on @Finish@.
 
 bq. This tool requires Xtext 2.7.0 or later. You may need to add the Xtext update site to the list of the available update sites to be able install and/or update Xtext: *http://download.eclipse.org/modeling/tmf/xtext/updates/composite/releases/*
+-->
 
 h3. Requirements
 
