Use Eclipse 2.0 license feature and migrate all sources to EPL 2.0
Install the TPD tool in the setup to be able to regenerate the target
platform easily.

Use the Eclipse CBI branding image.

https://github.com/eclipse-cbi/targetplatform-dsl/issues/31

--- a/README.textile
+++ b/README.textile
@@ -138,4 +138,4 @@ Contributions are always welcome! See "CONTRIBUTING.md":https://github.com/eclip
 
 h2. License
 
-This program and the accompanying materials are made available under the terms of the Eclipse Public License v1.0 which accompanies this distribution, and is available at http://www.eclipse.org/legal/epl-v10.html 
+This program and the accompanying materials are made available under the terms of the Eclipse Public License 2.0 which accompanies this distribution, and is available at "https://www.eclipse.org/legal/epl-2.0/":https://www.eclipse.org/legal/epl-2.0/ 
